--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "v-tap": "^2.0.2",
-    "vue": "^1.0.15",
-    "vuex": "^0.6.2"
+    "vue": "^2.4.2",
+    "vuex": "^2.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.2.3",
     "autoprefixer-loader": "^3.2.0",
-    "babel-core": "^6.0.0",
-    "babel-loader": "^6.0.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
@@ -28,7 +28,6 @@
     "css-loader": "^0.23.1",
     "cssnano": "^3.4.0",
     "del": "^2.2.1",
-    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.4",
     "gulp": "^3.9.0",
     "gulp-base64": "^0.1.3",
@@ -38,27 +37,25 @@
     "gulp-replace": "^0.5.4",
     "gulp-rev": "^7.1.0",
     "gulp-rev-collector": "^1.0.5",
-    "gulp-sass": "^2.1.1",
+    "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.4.2",
     "gulp-watch": "^4.3.9",
     "gulp-watch-path": "^0.1.0",
     "json-loader": "^0.5.4",
-    "node-sass": "^3.4.2",
+    "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.6",
     "precss": "^1.4.0",
     "run-sequence": "^1.1.5",
-    "sass-loader": "^3.1.2",
-    "style-loader": "^0.13.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "url-loader": "^0.5.7",
     "v-tap": "^1.0.5",
     "vinyl-named": "^1.1.0",
-    "vue-hot-reload-api": "^1.2.0",
-    "vue-html-loader": "^1.2.0",
-    "vue-loader": "^8.1.4",
-    "vue-router": "^0.7.11",
-    "vue-style-loader": "^1.0.0",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-stream": "^3.2.0"
+    "vue-loader": "^11.0.0",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.4.2",
+    "webpack": "^3.5.5",
+    "webpack-stream": "^4.0.0"
   }
 }
